--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ strong.obs{
     margin-top:30px ;
 }
 
+footer{
+    padding-bottom: 5px;
+}
+
 footer h4{
     text-align: center;
     font-size: 20px;
@@ -108,3 +112,10 @@ a.git {
     text-decoration: none;
     color: rgb(214, 208, 208);
 }
+
+
+@media (max-width: 600px) {
+    nav ul li {
+        display: block;
+        margin: 10px 0;
+    }
